refactor: apply misc Java 11-17 improvements
Motivation:
Modernize Java code to use Java 11-17 APIs for cleaner, more
idiomatic code.

Modification:
- String.isBlank() replacing trim().isEmpty()
- Collection.toArray(IntFunction) replacing toArray(new X[0])
- Map.forEach replacing entrySet iteration loops
- Text blocks replacing multi-line string concatenation
- Records replacing simple data holder classes

Result:
Cleaner, more modern Java code using Java 11-17 features.